--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -18,12 +18,13 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h36-LD-jGa">
-                                <rect key="frame" x="0.0" y="20" width="320" height="416"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="372"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             </imageView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5gf-rf-Jce">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5gf-rf-Jce" userLabel="BottomToolbar">
                                 <rect key="frame" x="0.0" y="436" width="320" height="44"/>
                                 <items>
+                                    <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="yoS-DE-UbJ"/>
                                     <barButtonItem systemItem="camera" id="7v0-fP-9qh">
                                         <connections>
                                             <action selector="pickPhotoFromCamera:" destination="vXZ-lx-hvc" id="nUG-xN-lCr"/>
@@ -35,6 +36,7 @@
                                             <action selector="pickPhotoFromAlbum:" destination="vXZ-lx-hvc" id="GUz-NL-GPb"/>
                                         </connections>
                                     </barButtonItem>
+                                    <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="8RR-vN-rEm"/>
                                 </items>
                             </toolbar>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="Top" textAlignment="center" minimumFontSize="12" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="AxA-gn-Ae7">
@@ -53,8 +55,16 @@
                                     <outlet property="delegate" destination="vXZ-lx-hvc" id="s0g-E5-Gwp"/>
                                 </connections>
                             </textField>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BSa-Nz-ByP" userLabel="TopToolbar">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <items>
+                                    <barButtonItem systemItem="action" id="8q5-XJ-rmj"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="CCR-5l-cGu"/>
+                                    <barButtonItem title="Cancel" id="QSp-f0-rnS"/>
+                                </items>
+                            </toolbar>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="AxA-gn-Ae7" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="2NC-ng-Gve"/>
                             <constraint firstAttribute="trailingMargin" secondItem="xN0-fP-xkP" secondAttribute="trailing" constant="-16" id="55w-WY-LmC"/>
@@ -65,10 +75,13 @@
                             <constraint firstItem="h36-LD-jGa" firstAttribute="top" secondItem="AxA-gn-Ae7" secondAttribute="top" id="XUP-8F-jaI"/>
                             <constraint firstItem="5gf-rf-Jce" firstAttribute="top" secondItem="h36-LD-jGa" secondAttribute="bottom" id="a4x-5F-IAH"/>
                             <constraint firstItem="h36-LD-jGa" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="dHZ-61-lQA"/>
-                            <constraint firstItem="h36-LD-jGa" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="fDq-Mf-6Xe"/>
+                            <constraint firstItem="BSa-Nz-ByP" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="hC1-ER-nhL"/>
                             <constraint firstAttribute="trailingMargin" secondItem="h36-LD-jGa" secondAttribute="trailing" constant="-16" id="jal-Xf-8Uq"/>
                             <constraint firstAttribute="trailingMargin" secondItem="5gf-rf-Jce" secondAttribute="trailing" constant="-16" id="mea-eA-lwK"/>
+                            <constraint firstItem="BSa-Nz-ByP" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="nLY-7r-2vD"/>
                             <constraint firstItem="xN0-fP-xkP" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="ocq-Lw-Yi1"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="BSa-Nz-ByP" secondAttribute="trailing" constant="-16" id="qhw-B4-EFz"/>
+                            <constraint firstItem="h36-LD-jGa" firstAttribute="top" secondItem="BSa-Nz-ByP" secondAttribute="bottom" id="rEs-Wg-gSE"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
@@ -82,7 +95,7 @@
                         <outlet property="imageViewBottomConstraint" destination="a4x-5F-IAH" id="qfe-rF-hst"/>
                         <outlet property="imageViewLeftConstraint" destination="dHZ-61-lQA" id="MAf-rd-B6B"/>
                         <outlet property="imageViewRightConstraint" destination="jal-Xf-8Uq" id="7lU-PT-hvo"/>
-                        <outlet property="imageViewTopConstraint" destination="fDq-Mf-6Xe" id="VYd-8M-my2"/>
+                        <outlet property="imageViewTopConstraint" destination="rEs-Wg-gSE" id="Ky9-HK-99s"/>
                         <outlet property="toolbar" destination="5gf-rf-Jce" id="Ggy-PQ-KmP"/>
                         <outlet property="topTextField" destination="AxA-gn-Ae7" id="gXA-as-RCV"/>
                         <outlet property="topTextLeftConstraint" destination="2NC-ng-Gve" id="PYe-bX-dS7"/>
