--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -23,6 +23,9 @@
                             </imageView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5gf-rf-Jce" userLabel="BottomToolbar">
                                 <rect key="frame" x="0.0" y="436" width="320" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="wex-zi-fg6"/>
+                                </constraints>
                                 <items>
                                     <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="yoS-DE-UbJ"/>
                                     <barButtonItem systemItem="camera" id="7v0-fP-9qh">
@@ -58,6 +61,9 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BSa-Nz-ByP" userLabel="TopToolbar">
                                 <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                                 <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Yrw-eF-Lo9"/>
+                                </constraints>
                                 <items>
                                     <barButtonItem systemItem="action" id="8q5-XJ-rmj">
                                         <connections>
